Room APIs (Create, Update, Delete)